[project]
name = "comfyui-show-text"
description = "A simple but powerful node for ComfyUI that displays text input in a readable format. Perfect for viewing outputs from text generation nodes, prompt builders, interrogators, and more."
version = "1.0.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/fairy-root/ComfyUI-Show-Text.git"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "fairy-root"
DisplayName = "ComfyUI-Show-Text"
Icon = ""